--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>vue_demo</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>chat-fe</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link rel="shortcut icon" type="image/png" href="/assets/logo.png"/>
   </head>
   <body>
-    <div id="app">
-      <h1>
-        {{ greeting }}
-      </h1>
-      <input v-model="greeting">
-      <div v-if="count === 0">
-        Green
-      </div>
-      <button onclick="alert('signed ip')" v-bind:disabled="greeting.length < 3"> To jest button
-      </button>
-    </div>
-    <script src="/dist/build.js"></script>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
